<resources>
    <string name="app_name">Healthy Lifestyle</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="meals_menu">THIS IS MENU FOR MEALS</string>

    <string name="action_settings">Settings</string>
    <string name="action_set_notification">Set notification</string>
    <string name="action_home">Home</string>
    <string name="action_remove_selected_items">Delete selected</string>
    <string name="title_activity_meal_menu">Meal Menu</string>
    <string name="action_meals_menu">meals menu</string>

    <!-- TARGET MODULE START -->
    <string name="activity_target_list_title">Target Module</string>
    <string name="activity_target_add_new">Add new</string>
    <string name="activity_target_edit">Edit target</string>
    <string name="activity_target_add_new_title">Add new target</string>
    <string name="activity_target_add_new_name">Name</string>
    <string name="activity_target_add_new_description">Description</string>
    <string name="activity_target_add_new_current_value">Current value</string>
    <string name="activity_target_add_new_desired_value">Desired value</string>
    <string name="activity_target_add_new_save">Save</string>
    <string name="title_activity_target_edit_list_activty">TargetEditListActivty</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_meal_add">Add new meal</string>
    <!-- TARGET MODULE END -->
</resources>
