<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/action_target_module_add_new"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top|center_horizontal"
    android:orientation="vertical"
    tools:context=".TargetAddNewActivity">

    <EditText android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/activity_target_add_new_name" />

    <EditText android:id="@+id/descriptionEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:gravity="top|left"
        android:lines="8"
        android:minLines="6"
        android:maxLines="10"
        android:hint="@string/activity_target_add_new_description" />

    <EditText android:id="@+id/currentValueEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/activity_target_add_new_current_value" />

    <EditText android:id="@+id/desiredValueEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/activity_target_add_new_desired_value" />

    <Button android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_target_add_new_save"
        android:onClick="addTargetEvent" />

</LinearLayout>